framec_tests/language_specific/python/v3_cli_project/positive/simple_project/mod_b.frm
@target python

system S2 {
    machine:
        $A {
            e() { -> $A() }
        }
}

