framec_tests/language_specific/python/v3_cli_project/negative/parent_forward_without_parent/child.frm
@target python

system C {
    machine:
        $A {
            e() { => $^ }
        }
}

